--- a/index.html
+++ b/index.html
@@ -30,7 +30,18 @@
     hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
     .footer { text-align:center; padding-top:30px; font-style: italic; }
 	</style>
-	
+	<script type="text/javascript">
+
+		var _gaq = _gaq || [];
+		_gaq.push(['_setAccount', 'UA-3959323-7']);
+		_gaq.push(['_trackPageview']);
+
+		(function() {
+		 var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+		 ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+		 (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(ga);
+		 })();
+	</script>
 </head>
 
 <body>
@@ -180,6 +191,5 @@ Original Software Creator: Software Garden, Inc. PO Box 610369 Newton Highlands,
     
   </div>
 
-  
 </body>
 </html>
