--- a/index.html
+++ b/index.html
@@ -6,30 +6,6 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
 	<title>lantrix/pRSSlist @ GitHub</title>
-	
-	<style type="text/css">
-		body {
-  		margin-top: 1.0em;
-  		background-color: #DDE5D9;
-		  font-family: "Helvetica,Arial,FreeSans"; 
-  		color: #000000;
-    }
-    #container {
-      margin: 0 auto;
-      width: 700px;
-    }
-		h1 { font-size: 3.8em; color: #221a26; margin-bottom: 3px; }
-		h1 .small { font-size: 0.4em; }
-		h1 a { text-decoration: none }
-		h2 { font-size: 1.5em; color: #221a26; }
-    h3 { text-align: center; color: #221a26; }
-    a { color: #221a26; }
-    .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
-    .download { float: right; }
-		pre { background: #000; color: #fff; padding: 15px;}
-    hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
-    .footer { text-align:center; padding-top:30px; font-style: italic; }
-	</style>
 	<script type="text/javascript" language="javascript">
 	<!--
 	function mangle() {
@@ -82,6 +58,7 @@
 		 (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(ga);
 		 })();
 	</script>
+	<link rel="stylesheet" href="prsslist.css" type="text/css" />
 </head>
 
 <body onload="fixLinks();">
