--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
 
 		<h1>Why pRSSlist?</h1>
 
-		<p>I used ListGarden<SMALL><SUP>TM</SUP></SMALL> but found it needed some changes, but is not currently maintained. The easiest thing to do was maintain my own copy. pRSSlist was born from a fork of v1.3.1 of ListGarden™ v1.3.1 software from Software Garden Inc.</p>
+		<p>I once used the ListGarden<SMALL><SUP>TM</SUP></SMALL> RSS generator but found it wanting in some areas. It was last updated in 2005, and I had thought to update it.</p>
+		<p>However, the easiest thing it seemed was to maintain my own copy. pRSSlist was born from a fork of v1.3.1 of ListGarden™ from <a href="http://softwaregarden.com">Software Garden</a> Inc.</p>
 		<p>Github is the perfect social coding platform to host pRSSlist on.</p>
 
 		<h1>Use of pRSSlist</h1>
