Reword and format intro and guides

--- a/index.html
+++ b/index.html
@@ -90,18 +90,16 @@
 		<p>Github is the perfect social coding platform to host pRSSlist on.</p>
 
 		<h1>Use of pRSSlist</h1>
+<p>The guides here are over on Software Garden's homepage, and they are great starting points for using pRSSlist in it's current form.</p>
+<p><a href="http://www.softwaregarden.com/products/listgarden/podcasting.html" title="Software Garden ListGarden Program: Setting Up an RSS Feed for Podcasting Using ListGarden">Setting Up an RSS Feed for Podcasting</a><br />
+This page gives step-by-step instructions for using prsslist (in its previous incarnation known as ListGarden) to create an RSS feed for a podcast so that listeners can subscribe and automatically download new episodes when they are available. It also shows how to automatically create a companion "List of Shows" HTML page.</p>
+<p><a href="http://www.softwaregarden.com/products/listgarden/websiterss.html" title="Software Garden ListGarden Program: Adding an RSS feed to a normal website">Adding an RSS feed to a normal website</a><br />
+This page gives step-by-step instructions for using prsslist (in its previous incarnation known as ListGarden) to add an RSS feed to a normal website.</p>
+<p><a href="http://www.softwaregarden.com/products/listgarden/example1.html" title="Software Garden ListGarden Program: Example Of A Simple Online List">Example Of A Simple Online List</a><br />
+This page presents an example of using prsslist (in its previous incarnation known as ListGarden) to maintain and distribute a simple list.</p>
+<p><a href="http://www.softwaregarden.com/products/listgarden/rssstorage.html" title="Software Garden ListGarden Program: Storing RSS on inexpensive web server space">Storing RSS on inexpensive web server space</a><br />
+This page gives gives examples of storing public RSS feed files on inexpensive web server storage available through many ISPs and free web hosting communities.</p>
 
-		<a href="http://www.softwaregarden.com/products/listgarden/podcasting.html" title="Software Garden ListGarden Program: Setting Up an RSS Feed for Podcasting Using ListGarden">Setting Up an RSS Feed for Podcasting</a>
-		This page gives step-by-step instructions for using prsslist (in its previous incarnation known as ListGarden) to create an RSS feed for a podcast so that listeners can subscribe and automatically download new episodes when they are available. It also shows how to automatically create a companion "List of Shows" HTML page.
-
-		<a href="http://www.softwaregarden.com/products/listgarden/websiterss.html" title="Software Garden ListGarden Program: Adding an RSS feed to a normal website">Adding an RSS feed to a normal website</a>
-		This page gives step-by-step instructions for using prsslist (in its previous incarnation known as ListGarden) to add an RSS feed to a normal website.
-
-		<a href="http://www.softwaregarden.com/products/listgarden/example1.html" title="Software Garden ListGarden Program: Example Of A Simple Online List">Example Of A Simple Online List</a>
-		This page presents an example of using prsslist (in its previous incarnation known as ListGarden) to maintain and distribute a simple list.
-
-		<a href="http://www.softwaregarden.com/products/listgarden/rssstorage.html" title="Software Garden ListGarden Program: Storing RSS on inexpensive web server space">Storing RSS on inexpensive web server space</a>
-		This page gives gives examples of storing public RSS feed files on inexpensive web server storage available through many ISPs and free web hosting communities.</p>
 		<h2>Dependencies</h2>
 		<p>The <strong>system requirements</strong> are: Internet connection if uploading the RSS files by FTP, 200KB+ disk space, Perl language system that includes the library modules:
 			<ul>
