change back to pre for CSS

--- a/index.html
+++ b/index.html
@@ -125,15 +125,15 @@ This page gives gives examples of storing public RSS feed files on inexpensive w
 			<li>Read the <a href="#license">License</a> Agreement to make sure that you understand the restrictions and rights that apply to this program. The source code is covered by the <a href="http://www.gnu.org/licenses/gpl-2.0.txt" title="">GNU GPLv2</a>. The Generic Perl Version is available for free and comes with no warranty of any kind.</li>
 			<li>If you do not agree to the above license, do not download or use the program.* You may not use or copy the program except under terms of the license.</li>
 			<li>Download the Local Generic Perl Version from the "Downloads page":http://github.com/lantrix/prsslist/downloads, or use git to clone the latest version by following these steps
-				<code>
-						git clone git://github.com/lantrix/prsslist.git
-				</code>
+				<pre>
+git clone git://github.com/lantrix/prsslist.git
+				</pre>
 			</li>
 			<li>You run the program locally by extracting the download and executing the commands:
-				<code>
-						cd prsslist
-						perl prsslist.pl option values
-				</code>
+				<pre>
+cd prsslist
+perl prsslist.pl option values
+				</pre>
 			</li>
 			<li>You can get a list of options by using the "-h" option. When executing the program, you can exit before it's finished by pressing Ctrl-C.</li>
 		</ul>
@@ -197,7 +197,7 @@ This page gives gives examples of storing public RSS feed files on inexpensive w
 			<a href="http://github.com/lantrix/prsslist/tarball/v2.0">tar</a> formats.
 		</p>
 		<p>You can also grab the latest code - cloning the project with <a href="http://git-scm.com">Git</a> by running:
-			<code>$ git clone git://github.com/lantrix/prsslist</code>
+			<pre>$ git clone git://github.com/lantrix/prsslist</pre>
 		</p>
 
 		<div class="footer">
