--- a/index.html
+++ b/index.html
@@ -90,15 +90,11 @@
 		<p>Github is the perfect social coding platform to host pRSSlist on.</p>
 
 		<h1>Use of pRSSlist</h1>
-<p>The guides here are over on Software Garden's homepage, and they are great starting points for using pRSSlist in it's current form.</p>
-<p><a href="http://www.softwaregarden.com/products/listgarden/podcasting.html" title="Software Garden ListGarden Program: Setting Up an RSS Feed for Podcasting Using ListGarden">Setting Up an RSS Feed for Podcasting</a><br />
-This page gives step-by-step instructions for using prsslist (in its previous incarnation known as ListGarden) to create an RSS feed for a podcast so that listeners can subscribe and automatically download new episodes when they are available. It also shows how to automatically create a companion "List of Shows" HTML page.</p>
-<p><a href="http://www.softwaregarden.com/products/listgarden/websiterss.html" title="Software Garden ListGarden Program: Adding an RSS feed to a normal website">Adding an RSS feed to a normal website</a><br />
-This page gives step-by-step instructions for using prsslist (in its previous incarnation known as ListGarden) to add an RSS feed to a normal website.</p>
-<p><a href="http://www.softwaregarden.com/products/listgarden/example1.html" title="Software Garden ListGarden Program: Example Of A Simple Online List">Example Of A Simple Online List</a><br />
-This page presents an example of using prsslist (in its previous incarnation known as ListGarden) to maintain and distribute a simple list.</p>
-<p><a href="http://www.softwaregarden.com/products/listgarden/rssstorage.html" title="Software Garden ListGarden Program: Storing RSS on inexpensive web server space">Storing RSS on inexpensive web server space</a><br />
-This page gives gives examples of storing public RSS feed files on inexpensive web server storage available through many ISPs and free web hosting communities.</p>
+		<p>The guides here are over on Software Garden's homepage, and they are great starting points for using pRSSlist in it's current form.</p>
+		<p><a href="http://www.softwaregarden.com/products/listgarden/podcasting.html" title="Software Garden ListGarden Program: Setting Up an RSS Feed for Podcasting Using ListGarden">Setting Up an RSS Feed for Podcasting</a><br />This page gives step-by-step instructions for using prsslist (in its previous incarnation known as ListGarden) to create an RSS feed for a podcast so that listeners can subscribe and automatically download new episodes when they are available. It also shows how to automatically create a companion "List of Shows" HTML page.</p>
+		<p><a href="http://www.softwaregarden.com/products/listgarden/websiterss.html" title="Software Garden ListGarden Program: Adding an RSS feed to a normal website">Adding an RSS feed to a normal website</a><br />This page gives step-by-step instructions for using prsslist (in its previous incarnation known as ListGarden) to add an RSS feed to a normal website.</p>
+		<p><a href="http://www.softwaregarden.com/products/listgarden/example1.html" title="Software Garden ListGarden Program: Example Of A Simple Online List">Example Of A Simple Online List</a><br />This page presents an example of using prsslist (in its previous incarnation known as ListGarden) to maintain and distribute a simple list.</p>
+		<p><a href="http://www.softwaregarden.com/products/listgarden/rssstorage.html" title="Software Garden ListGarden Program: Storing RSS on inexpensive web server space">Storing RSS on inexpensive web server space</a><br />This page gives gives examples of storing public RSS feed files on inexpensive web server storage available through many ISPs and free web hosting communities.</p>
 
 		<h2>Dependencies</h2>
 		<p>The <strong>system requirements</strong> are: Internet connection if uploading the RSS files by FTP, 200KB+ disk space, Perl language system that includes the library modules:
@@ -126,13 +122,13 @@ This page gives gives examples of storing public RSS feed files on inexpensive w
 			<li>If you do not agree to the above license, do not download or use the program.* You may not use or copy the program except under terms of the license.</li>
 			<li>Download the Local Generic Perl Version from the "Downloads page":http://github.com/lantrix/prsslist/downloads, or use git to clone the latest version by following these steps
 				<pre>
-git clone git://github.com/lantrix/prsslist.git
+					git clone git://github.com/lantrix/prsslist.git
 				</pre>
 			</li>
 			<li>You run the program locally by extracting the download and executing the commands:
 				<pre>
-cd prsslist
-perl prsslist.pl option values
+					cd prsslist
+					perl prsslist.pl option values
 				</pre>
 			</li>
 			<li>You can get a list of options by using the "-h" option. When executing the program, you can exit before it's finished by pressing Ctrl-C.</li>
