Corrected list item

--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
 		<ul>
 			<li>Make sure that you have Perl installed on your system. When you have Perl installed, you can run Perl programs from the command line by executing <code>perl programfile</code> or if you are running a web server, by serving a Perl program whose permission is set to <em>Execute</em>. You can check that Perl is installed and see the version information by executing the command <code>perl -v</code>.</li>
 			<li>Read the <a href="#license">License</a> Agreement to make sure that you understand the restrictions and rights that apply to this program. The source code is covered by the <a href="http://www.gnu.org/licenses/gpl-2.0.txt" title="">GNU GPLv2</a>. The Generic Perl Version is available for free and comes with no warranty of any kind.</li>
-			<li>If you do not agree to the above license, do not download or use the program.* You may not use or copy the program except under terms of the license.</li>
+			<li>If you do not agree to the above license, do not download or use the program.</li>
+			<li>You may not use or copy the program except under terms of the license.</li>
 			<li>Download the Local Generic Perl Version from the "Downloads page":http://github.com/lantrix/prsslist/downloads, or use git to clone the latest version by following these steps
 				<pre>
 git clone git://github.com/lantrix/prsslist.git
@@ -146,7 +147,7 @@ perl prsslist.pl option values
 			<li>prsslistLicense.pm</li>
 		</ul>
 
-		<p>prsslist maintains one or more files locally to save all the feed information. By default, those files are stored in the current directory. The files are named "prefix.feed.name.txt", where "prefix" is "listdata" by default and "name" is a name you give to each feed when you create it (for example, "listdata.feed.dblog.txt"). The *-d string* option can be used to set a different datafile prefix than the default "listdata". The prefix may include path information to use a different directory, e.g., "~/prsslist/data/feeddata".</p>
+		<p>prsslist maintains one or more files locally to save all the feed information. By default, those files are stored in the current directory. The files are named "prefix.feed.name.txt", where "prefix" is "listdata" by default and "name" is a name you give to each feed when you create it (for example, "listdata.feed.dblog.txt"). The <em>-d string</em> option can be used to set a different datafile prefix than the default "listdata". The prefix may include path information to use a different directory, e.g., "~/prsslist/data/feeddata".</p>
 
 		<h2>Troubleshooting</h2>
 
