--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 			<li>Read the <a href="#license">License</a> Agreement to make sure that you understand the restrictions and rights that apply to this program. The source code is covered by the <a href="http://www.gnu.org/licenses/gpl-2.0.txt" title="">GNU GPLv2</a>. The Generic Perl Version is available for free and comes with no warranty of any kind.</li>
 			<li>If you do not agree to the above license, do not download or use the program.</li>
 			<li>You may not use or copy the program except under terms of the license.</li>
-			<li>Download the Local Generic Perl Version from the "Downloads page":http://github.com/lantrix/prsslist/downloads, or use git to clone the latest version by following these steps
+			<li>Download the Local Generic Perl Version from the <a href="http://github.com/lantrix/prsslist/downloads" title="Downloads for lantrix's prsslist - GitHub">Downloads page</a>, or use git to clone the latest version by following these steps
 				<pre>
 git clone git://github.com/lantrix/prsslist.git
 				</pre>
@@ -151,7 +151,7 @@ perl prsslist.pl option values
 
 		<h2>Troubleshooting</h2>
 
-		<p>If the program displays an error message when run complaining about a missing module, such as LWP, or LWP::UserAgent, you can get the missing module from CPAN. Most Perl installations include the CPAN.pm module to automate this downloading process. You can "seek further help":http://lmgtfy.com/?q=CPAN.pm+how+to+use to get an idea how to use CPAN.pm. CPAN.pm documentation should be available on your computer by using the command "perldoc CPAN".</p>
+		<p>If the program displays an error message when run complaining about a missing module, such as LWP, or LWP::UserAgent, you can get the missing module from CPAN. Most Perl installations include the CPAN.pm module to automate this downloading process. You can <a href="http://lmgtfy.com/?q=CPAN.pm+how+to+use" title="Let me google that for you">seek further help</a> to get an idea how to use CPAN.pm. CPAN.pm documentation should be available on your computer by using the command "perldoc CPAN".</p>
 
 		<h2>Uninstall</h2>
 
